[package]
name = "broken-bolt"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

urlencoding = "2.1.3"
serde_json = "1"
sha2 = "0.10.9"
ring = "0.17.14"
base64 = "0.22.1"
serde_urlencoded = "0.7.1"
thiserror = "2.0.17"
serde-json-fmt = "0.1.0"
futures-util = "0.3.31"
url = "2.5.8"
crc32fast = "1.5.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
chrono = "0.4.43"
nestify = "0.3.3"

[lints.rust]
unused = "allow"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[[bin]]
name = "test"
path = "src/bin/test-stuff.rs"
