[package]
name = "broken-bolt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }

serde_urlencoded = "0.7.1"
serde-json-fmt = "0.1.0"
futures-util = "0.3.31"
urlencoding = "2.1.3"
serde_with = "3.16.1"
thiserror = "2.0.17"
crossterm = "0.29.0"
crc32fast = "1.5.0"
ratatui = "0.30.0"
dotenv = "0.15.0"
chrono = "0.4.43"
base64 = "0.22.1"
nestify = "0.3.3"
ring = "0.17.14"
sha2 = "0.10.9"
url = "2.5.8"

[lints.rust]
unused = "allow"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[[bin]]
name = "fetch"
path = "src/bin/fetch.rs"

[[bin]]
name = "ohlc"
path = "src/bin/ohlc.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"
